--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
- <h1 hidden>Wow</h1>
+ <!-- <h1 hidden>Wow</h1>
  <h2>Wow</h2>
  <h3>Wow</h3>
  <h4>Wow</h4>
@@ -79,7 +79,7 @@
       <li><a href="#top">Top of the page</a></li>
       <li><a href="#page-theme">Main theme</a></li>
       <li><a href="#bottom">Footer of the page</a></li>
-    </ul>
+    </ul> -->
 
     
 </body>
