--- a/index.html
+++ b/index.html
@@ -83,6 +83,72 @@
 
     <!-- <div class="box"></div> -->
     
+
+    <!-- HOMEWORK6 -->
+
+<!-- <form ></form> -->
+
+<!-- <form name="signup_form" autocomplete="on" novalidate>
+  <label>
+    Email
+    <input type="email" name="email" />
+  </label>
+
+  <label>
+    Password
+    <input type="password" name="password" />
+  </label>
+
+  <button type="submit">Submit</button>
+</form> -->
+
+<!-- <form>
+  <label>
+    Email
+    <input type="email" name="email" />
+  </label>
+
+  <label>
+    Password
+    <input type="password" name="password" />
+  </label>
+
+  <button type="submit">Submit</button>
+</form> -->
+
+<!-- <form>
+  <label for="user_email">Email</label>
+  <input type="email" name="email" id="user_email" />
+
+  <label for="user_password">Password</label>
+  <input type="password" name="password" id="user_password" />
+
+  <button type="submit">Submit</button>
+</form> -->
+
+
+<!-- 
+<form>
+  <label>
+    Username
+    <input type="text" name="username" autofocus />
+  </label>
+  <label>
+    Email
+    <input type="email" name="email" />
+  </label>
+  <button type="submit">Submit</button>
+</form> -->
+
+
+<form>
+  <label>
+    Username
+    <input type="text" name="username" placeholder="Jacob Mercer" />
+  </label>
+  <button type="submit">Submit</button>
+</form>
+
 </body>
 </html>
 
