test radio butto

--- a/index.html
+++ b/index.html
@@ -140,13 +140,29 @@
   <button type="submit">Submit</button>
 </form> -->
 
-
+<!-- 
 <form>
   <label>
     Username
     <input type="text" name="username" placeholder="Jacob Mercer" />
   </label>
   <button type="submit">Submit</button>
+</form> -->
+
+<form>
+  <p>Choose a color:</p>
+  <label>
+    <input type="radio" name="color" value="red" checked />
+    Red
+  </label>
+  <label>
+    <input type="radio" name="color" value="white" />
+    White
+  </label>
+  <label>
+    <input type="radio" name="color" value="green" />
+    Green
+  </label>
 </form>
 
 </body>
