--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <button type="submit">Submit</button>
 </form> -->
 
-<form>
+<!-- <form>
   <p>Choose a color:</p>
   <label>
     <input type="radio" name="color" value="red" checked />
@@ -163,6 +163,18 @@
     <input type="radio" name="color" value="green" />
     Green
   </label>
+</form> -->
+
+<form>
+  <label>
+    Email
+    <input type="email" name="email" placeholder="example@mail.com">
+  </label>
+  <label>
+    Feedback
+    <textarea name="feedback" rows="5" placeholder="Type your message here..."></textarea>
+  </label>
+  <button type="submit">Submit</button>
 </form>
 
 </body>
