--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     Green
   </label>
 </form> -->
-
+<!-- 
 <form>
   <label>
     Email
@@ -178,5 +178,13 @@
 </form>
 
 </body>
-</html>
+</html> -->
+
+<label for="size">Size</label>
+<select id="size" name="size">
+  <option value="xs">Extra Small</option>
+  <option value="s">Small</option>
+  <option value="m" selected>Medium</option>
+  <option value="l">Large</option>
+</select>
 
