--- a/index.html
+++ b/index.html
@@ -177,14 +177,13 @@
   <button type="submit">Submit</button>
 </form>
 
-</body>
-</html> -->
-
 <label for="size">Size</label>
 <select id="size" name="size">
   <option value="xs">Extra Small</option>
   <option value="s">Small</option>
   <option value="m" selected>Medium</option>
   <option value="l">Large</option>
-</select>
+</select> -->
 
+</body>
+</html>
