--- a/index.html
+++ b/index.html
@@ -185,5 +185,27 @@
   <option value="l">Large</option>
 </select> -->
 
+
+
+
+
+
+<!-- DATALIST - автозаполнение -->
+
+<label for="fav">Choose your favourite browser</label>
+<input list="browsers" name="fav" id="fav" />
+
+<datalist id="browsers">
+  <option>Edge</option>
+  <option>Firefox</option>
+  <option>Chrome</option>
+  <option>Opera</option>
+  <option>Safari</option>
+</datalist>
+
+
+
+
+
 </body>
 </html>
