--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 <!-- DATALIST - автозаполнение -->
 
-<label for="fav">Choose your favourite browser</label>
+<!-- <label for="fav">Choose your favourite browser</label>
 <input list="browsers" name="fav" id="fav" />
 
 <datalist id="browsers">
@@ -201,9 +201,57 @@
   <option>Chrome</option>
   <option>Opera</option>
   <option>Safari</option>
-</datalist>
+</datalist> -->
 
+<!-- FIELDSER - ГРУППИРОВКА ПОЛЕЙ -->
 
+<form>
+  <fieldset>
+    <legend>Enter your contact details</legend>
+    <label>
+      Name
+      <input type="text" name="username" />
+    </label>
+    <label>
+      Email
+      <input type="email" name="email" />
+    </label>
+  </fieldset>
+
+  <fieldset>
+    <legend>Your favourite programming language</legend>
+    <label>
+      <input type="checkbox" name="language" value="python">
+      Python
+    </label>
+    <label>
+      <input type="checkbox" name="language" value="js">
+      JavaScript
+    </label>
+    <label>
+      <input type="checkbox" name="language" value="ruby">
+      Ruby
+    </label>
+  </fieldset>
+
+  <fieldset>
+    <legend>I want to receive</legend>
+    <label>
+      <input type="checkbox" name="newsletter" value="weekly">
+      The weekly newsletter
+    </label>
+    <label>
+      <input type="checkbox" name="newsletter" value="company_offers">
+      Offers from the company
+    </label>
+    <label>
+      <input type="checkbox" name="newsletter" value="associated_offers">
+      Offers from associated companies
+    </label>
+  </fieldset>
+
+  <button type="submit">Subscribe</button>
+</form>
 
 
 
