MUST HAVE FIELD in validation

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 </datalist> -->
 
 <!-- FIELDSER - ГРУППИРОВКА ПОЛЕЙ -->
-
+<!-- 
 <form>
   <fieldset>
     <legend>Enter your contact details</legend>
@@ -251,9 +251,30 @@
   </fieldset>
 
   <button type="submit">Subscribe</button>
+</form> -->
+
+
+
+
+
+
+
+<!-- VALIDATION - IN BRAUSER -->
+<!-- MUST FIELD -->
+
+<!-- 
+<form>
+  <label>
+    Email
+    <input type="email" name="email" required />
+  </label>
+  <label>
+    Password
+    <input type="password" name="password" required />
+  </label>
+
+  <button type="submit">Submit</button>
 </form>
 
-
-
 </body>
-</html>
+</html> -->
