current.js in correct folder
attach   js-speaker-form as
script in index

--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
 <!-- VALIDATION - IN BRAUSER -->
 <!-- MUST FIELD -->
 
-<!-- 
-<form>
+
+<form class="js-speaker-form">
   <label>
     Email
     <input type="email" name="email" required />
@@ -276,5 +276,8 @@
   <button type="submit">Submit</button>
 </form>
 
+<!-- =DON'T TOUCH SCRIPT---VALIDATION--NAME--INPUT -->
+<script src="./js/current.js" ></script>
+
 </body>
-</html> -->
+</html>
